kubernetes/main/apps/irc/thelounge/app/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: thelounge
  namespace: irc
spec:
  selector:
    app: thelounge
  ports:
    - port: 9000
      protocol: TCP
      targetPort: http
